--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
-  "name": "user-directory",
+  "homepage": "https://xelinx.github.io/user-directory/",
+  "name": "ground-hw-19",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.2.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "axios": "^0.19.0",
+    "bootstrap": "^4.5.0",
+    "gh-pages": "^3.1.0",
+    "jquery": "^3.5.1",
+    "react": "^16.8.6",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^16.8.6",
+    "react-native": "^0.63.3",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
